# concurrent-tcp-and-protocol-services-with-threaded-request-handling

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/protocols/: sctp_adapter.py  tcp_server.py  udp_server.py
app/services/: ai_evaluator.py  probe_client.py  protocol_manager.py  telemetry.py
frontend/: index.html
scripts/: load_probe.py
tests/: test_ai_evaluator.py  test_api.py
